tests/baselines/reference/jsxFactoryQualifiedNameResolutionError(strict=true).errors.txt
test.tsx(8,12): error TS7006: Parameter 'createElement' implicitly has an 'any' type.
test.tsx(9,16): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
test.tsx(9,17): error TS2552: Cannot find name 'MyElement'. Did you mean 'Element'?


==== test.tsx (3 errors) ====
    declare module JSX {
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render(createElement) {
               ~~~~~~~~~~~~~
!!! error TS7006: Parameter 'createElement' implicitly has an 'any' type.
            return <div />;
                   ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                    ~~~
!!! error TS2552: Cannot find name 'MyElement'. Did you mean 'Element'?
!!! related TS2728 lib.dom.d.ts:--:--: 'Element' is declared here.
        }
    }